// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegisterPage /> Should render and match the researcher 1`] = `
.c3 {
  width: auto;
  height: auto;
  height: 80px;
}

.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 100%;
  min-height: 100%;
  background: #F8FBFF;
}

.c1 {
  position: absolute;
  z-index: -1;
  background: #FFFFFF;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0.75;
  -ms-flex: 0.75;
  flex: 0.75;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  padding: 0 20px 30px 20px;
  border-radius: 5px;
  box-shadow: 0px 4px 10px rgba(227,238,251,0.8);
  position: fixed;
  height: 100vh;
  width: 50vw;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 30px 15px;
  margin-left: 50vw;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  font-weight: bold;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 25px;
  margin-bottom: 25px;
  height: 46px;
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-bottom: 40px;
  color: unset;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  margin-top: 20px;
  margin-bottom: 20px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
  margin-right: 20px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  margin-bottom: 8px;
  font-size: 23px;
  color: #2F3850;
}

.c9 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 12px;
  color: #2F3850;
  line-height: 12px;
}

.c12 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 5px;
  font-size: 12px;
  color: #2F3850;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c13 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c27 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-left: 3px;
  font-weight: 700;
  color: rgba(183,39,234,1);
  cursor: pointer;
  line-height: 1.5em;
  color: rgba(183,39,234,1);
  cursor: pointer;
}

.c15 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  height: 46px;
  color: #2F3850;
}

.c15:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c15:disabled {
  color: #ABBBD1;
}

.c17 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  height: 46px;
  color: #2F3850;
  opacity: 0.5;
}

.c17:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c17:disabled {
  color: #ABBBD1;
}

.c22 {
  display: none;
}

.c26 {
  margin-right: 5px;
  border-radius: 5px;
}

.c21:disabled + label > .c25 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c24:hover {
  cursor: pointer;
}

.c21:disabled + .c23 {
  opacity: 0.5;
  cursor: not-allowed;
}

@media only screen and (max-width:768px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    background: transparent;
    height: 400px;
    width: 100%;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    background: #FFFFFF;
    position: relative;
    height: auto;
    width: 100%;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    background: none;
    padding: 30px 15px;
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin-left: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media only screen and (min-width:768px) {
  .c6 {
    width: 83.33333333333334%;
  }
}

@media only screen and (min-width:960px) {
  .c6 {
    width: 66.66666666666666%;
  }
}

@media only screen and (min-width:1170px) {
  .c6 {
    width: 50%;
  }
}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <img
      alt="CIAS Application Logo"
      class="c3"
      height="80"
      src="IMAGE_MOCK"
    />
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <h1
            class="c8"
            font-size="23"
          >
            Register  account
          </h1>
          <p
            class="c9"
            font-size="12px"
          >
            Fields with an asterisk&lt;warningColor&gt;*&lt;/warningColor&gt; are required
          </p>
        </div>
        <div
          class="c10"
          width="100%"
        >
          <div
            class="c11"
          >
            <label
              for="firstName"
            >
              <p
                class="c12"
                font-size="12px"
                width="fit-content"
              >
                First Name
                <span
                  class="c13"
                  color="#D2371D"
                >
                  *
                </span>
              </p>
            </label>
            <div
              class="c14"
              width="100%"
            >
              <input
                class="c15"
                height="46"
                id="firstName"
                name="firstName"
                placeholder="Enter first name"
                type="text"
                value=""
                width="100%"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <label
              for="lastName"
            >
              <p
                class="c12"
                font-size="12px"
                width="fit-content"
              >
                Last name
                <span
                  class="c13"
                  color="#D2371D"
                >
                  *
                </span>
              </p>
            </label>
            <div
              class="c14"
              width="100%"
            >
              <input
                class="c15"
                height="46"
                id="lastName"
                name="lastName"
                placeholder="Enter last name"
                type="text"
                value=""
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          class="c16"
        >
          <label
            for="email"
          >
            <p
              class="c12"
              font-size="12px"
              width="fit-content"
            >
              E-mail address
              <span
                class="c13"
                color="#D2371D"
              >
                *
              </span>
            </p>
          </label>
          <div
            class="c14"
            width="100%"
          >
            <input
              class="c17"
              disabled=""
              height="46"
              id="email"
              name="email"
              placeholder="Enter e-mail address"
              type="email"
              value="test@gmail.com"
              width="100%"
            />
          </div>
        </div>
        <div
          class="c16"
        >
          <label
            for="password"
          >
            <p
              class="c12"
              font-size="12px"
              width="fit-content"
            >
              Password
              <span
                class="c13"
                color="#D2371D"
              >
                *
              </span>
            </p>
          </label>
          <div
            class="c14"
            width="100%"
          >
            <input
              class="c15"
              height="46"
              id="password"
              name="password"
              placeholder="Enter password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c16"
        >
          <label
            for="passwordConfirmation"
          >
            <p
              class="c12"
              font-size="12px"
              width="fit-content"
            >
              Password confirmation
              <span
                class="c13"
                color="#D2371D"
              >
                *
              </span>
            </p>
          </label>
          <div
            class="c14"
            width="100%"
          >
            <input
              class="c15"
              height="46"
              id="passwordConfirmation"
              name="passwordConfirmation"
              placeholder="Retype your password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <div
              class="c20"
            >
              <input
                class="c21 c22"
                id="terms"
                type="checkbox"
              />
              <label
                class="c23 c24"
                for="terms"
              >
                <img
                  class="c25 c26"
                  src="IMAGE_MOCK"
                />
                Accept
                <p
                  class="c27"
                  color="#B727EA"
                  font-weight="bold"
                >
                  Terms and conditions & Privacy Policy
                </p>
              </label>
            </div>
          </div>
        </div>
        <button
          class="c28"
          color="primary"
          height="46"
          radius="100px"
          type="submit"
        >
          Create an account
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RegisterPage /> Should render and match the snapshot for participant 1`] = `
.c3 {
  width: auto;
  height: auto;
  height: 80px;
}

.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 100%;
  min-height: 100%;
  background: #F8FBFF;
}

.c1 {
  position: absolute;
  z-index: -1;
  background: #FFFFFF;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0.75;
  -ms-flex: 0.75;
  flex: 0.75;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  padding: 0 20px 30px 20px;
  border-radius: 5px;
  box-shadow: 0px 4px 10px rgba(227,238,251,0.8);
  position: fixed;
  height: 100vh;
  width: 50vw;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 30px 15px;
  margin-left: 50vw;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  font-weight: bold;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 25px;
  margin-bottom: 25px;
  height: 46px;
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-bottom: 40px;
  color: unset;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  margin-top: 20px;
  margin-bottom: 20px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  width: 100%;
}

.c29 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  color: rgba(183,39,234,1);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
  margin-right: 20px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  margin-bottom: 8px;
  font-size: 23px;
  color: #2F3850;
}

.c9 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 12px;
  color: #2F3850;
  line-height: 12px;
}

.c12 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 5px;
  font-size: 12px;
  color: #2F3850;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c13 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c26 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-left: 3px;
  font-weight: 700;
  color: rgba(183,39,234,1);
  cursor: pointer;
  line-height: 1.5em;
  color: rgba(183,39,234,1);
  cursor: pointer;
}

.c15 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  height: 46px;
  color: #2F3850;
}

.c15:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c15:disabled {
  color: #ABBBD1;
}

.c21 {
  display: none;
}

.c25 {
  margin-right: 5px;
  border-radius: 5px;
}

.c20:disabled + label > .c24 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c23:hover {
  cursor: pointer;
}

.c20:disabled + .c22 {
  opacity: 0.5;
  cursor: not-allowed;
}

@media only screen and (max-width:768px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    background: transparent;
    height: 400px;
    width: 100%;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    background: #FFFFFF;
    position: relative;
    height: auto;
    width: 100%;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    background: none;
    padding: 30px 15px;
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin-left: 0;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media only screen and (min-width:768px) {
  .c6 {
    width: 83.33333333333334%;
  }
}

@media only screen and (min-width:960px) {
  .c6 {
    width: 66.66666666666666%;
  }
}

@media only screen and (min-width:1170px) {
  .c6 {
    width: 50%;
  }
}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <img
      alt="CIAS Application Logo"
      class="c3"
      height="80"
      src="IMAGE_MOCK"
    />
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <h1
            class="c8"
            font-size="23"
          >
            Register participant account
          </h1>
          <p
            class="c9"
            font-size="12px"
          >
            Fields with an asterisk&lt;warningColor&gt;*&lt;/warningColor&gt; are required
          </p>
        </div>
        <div
          class="c10"
          width="100%"
        >
          <div
            class="c11"
          >
            <label
              for="firstName"
            >
              <p
                class="c12"
                font-size="12px"
                width="fit-content"
              >
                First Name
                <span
                  class="c13"
                  color="#D2371D"
                >
                  *
                </span>
              </p>
            </label>
            <div
              class="c14"
              width="100%"
            >
              <input
                class="c15"
                height="46"
                id="firstName"
                name="firstName"
                placeholder="Enter first name"
                type="text"
                value=""
                width="100%"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <label
              for="lastName"
            >
              <p
                class="c12"
                font-size="12px"
                width="fit-content"
              >
                Last name
                <span
                  class="c13"
                  color="#D2371D"
                >
                  *
                </span>
              </p>
            </label>
            <div
              class="c14"
              width="100%"
            >
              <input
                class="c15"
                height="46"
                id="lastName"
                name="lastName"
                placeholder="Enter last name"
                type="text"
                value=""
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          class="c16"
        >
          <label
            for="email"
          >
            <p
              class="c12"
              font-size="12px"
              width="fit-content"
            >
              E-mail address
              <span
                class="c13"
                color="#D2371D"
              >
                *
              </span>
            </p>
          </label>
          <div
            class="c14"
            width="100%"
          >
            <input
              class="c15"
              height="46"
              id="email"
              name="email"
              placeholder="Enter e-mail address"
              type="email"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c16"
        >
          <label
            for="password"
          >
            <p
              class="c12"
              font-size="12px"
              width="fit-content"
            >
              Password
              <span
                class="c13"
                color="#D2371D"
              >
                *
              </span>
            </p>
          </label>
          <div
            class="c14"
            width="100%"
          >
            <input
              class="c15"
              height="46"
              id="password"
              name="password"
              placeholder="Enter password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c16"
        >
          <label
            for="passwordConfirmation"
          >
            <p
              class="c12"
              font-size="12px"
              width="fit-content"
            >
              Password confirmation
              <span
                class="c13"
                color="#D2371D"
              >
                *
              </span>
            </p>
          </label>
          <div
            class="c14"
            width="100%"
          >
            <input
              class="c15"
              height="46"
              id="passwordConfirmation"
              name="passwordConfirmation"
              placeholder="Retype your password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c17"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <input
                class="c20 c21"
                id="terms"
                type="checkbox"
              />
              <label
                class="c22 c23"
                for="terms"
              >
                <img
                  class="c24 c25"
                  src="IMAGE_MOCK"
                />
                Accept
                <p
                  class="c26"
                  color="#B727EA"
                  font-weight="bold"
                >
                  Terms and conditions & Privacy Policy
                </p>
              </label>
            </div>
          </div>
        </div>
        <button
          class="c27"
          color="primary"
          height="46"
          radius="100px"
          type="submit"
        >
          Create an account
        </button>
        <div
          class="c28"
          width="100%"
        >
          <a
            href="/login"
          >
            <button
              class="c29"
              color="#B727EA"
            >
              I already have an account
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
